<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Navigation Oben -->
    <string name="naviObenBild">Bild </string>
    <string name="naviObenBerufserfahrung"> Beruf </string>
    <string name="naviObenBildung"> Bildung </string>
    <string name="naviObenSkills"> Skills </string>
    <string name="naviObenZusammenfassung"> Zusammenfassung </string>
    <string name="naviObenFinish"> Finish</string>

    <!-- Navigation Unten -->
    <string name="naviUntenBild">Bild</string>
    <string name="naviUntenBerufserfahrung">Berufserfahrung</string>
    <string name="naviUntenBildung">Bildung</string>
    <string name="naviUntenSkills">Skills</string>
    <string name="naviUntenZusammenfassung">Zusammenfassung</string>
    <string name="naviUntenFinish">Finish</string>
    <string name="naviUntenVor"> &lt; </string>
    <string name="naviUntenBack"> &gt; </string>

    <!-- Erste Seite -->
    <string name="txt_startseite">Die Lebenslauf App</string>
    <string name="app_name">JH-DB-RB-lebenslauf-app</string>
    <string name="action_settings">Settings</string>
    <string name="txt_logo">Hier kommt ein Bild hin</string>
    <string name="txt_anweisung">CV schnell und einfach erfassen</string>
    <string name="txt_erfassen">CV erfassen</string>
    <string name="action_daten_anzeigen">Daten Anzeigen</string>

    <!-- Zweite Seite -->
    <string name="txt_bild">Personalien erfassen</string>
    <string name="txt_bildLaden">Bild auswählen / Hochladen</string>
    <string name="title_activity_bild">BildActivity</string>
    <string name="txt_bild_hochladen">Bild hochladen</string>
    <string name="txt_kamera">Kamera</string>
    <string name="txt_anrede">Anrede</string>

    <string-array name="anrede_array">
        <item>Herr</item>
        <item>Frau</item>
        <item>Doktor</item>
    </string-array>

    <string name="txt_name">Name</string>
    <string name="txt_vorname">Vorname</string>
    <string name="txt_adresse">Adresse</string>
    <string name="txt_berufserfahrung">Berufserfahrung</string>
    <string name="txt_nav_zuruck">Bild</string>
    <string name="txt_geb">Geburtsdatum</string>

    <!-- Dritte Seite -->
    <string name="title_activity_berufserfahrung">Berufserfahrung</string>
    <string name="txt_firma">Firma:</string>
    <string name="txt_dauer">Dauer:</string>
    <string name="txt_taetigkeit">Tätigkeit:</string>
    <string name="txt_berufserfahrung_beschreibung">Beschreibung</string>
    <string name="txt_berufserfahrung_add">Berufserfahrung hinzufügen</string>

    <!-- Vierte Seite -->
    <string name="txt_bildung">Schul- und Weiterbildung</string>
    <string name="title_activity_bildung">BildungActivity</string>
    <string name="txt_grund">Grundbildung</string>
    <string name="txt_aus">Ausbildung</string>
    <string name="txt_weiter">Weiterbildung</string>
    <string name="txt_schule">Schule:</string>
    <string name="txt_bildung_add">Bildung hinzufügen</string>
    <string name="txt_skills">Skills</string>
    <string name="title_activity_skills">SkillsActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Fünfte Seite -->
    <string-array name="skills_array">
        <item></item>
        <item>Deutsch</item>
        <item>Englisch</item>
        <item>Französisch</item>
        <item>Italienisch</item>
        <item>ERP Kenntnisse</item>
        <item>Office Kenntnisse</item>
    </string-array>

    <string name="txt_skill">Skills</string>
    <string name="txt_skill_level">Level</string>
    <string name="txt_skill_add">Skill hinzufügen</string>
    <string name="txt_itkenntniss">IT-Kenntnisse:</string>
    <string name="title_activity_zusammenfassung">ZusammenfassungActivity</string>
    <string name="txt_zusammenfassung">Zusammenfassung</string>

    <!-- Sechste Seite -->
    <string name="txt_finish">Finish</string>
    <string name="txt_personalien">Personalien</string>
    <string name="txt_leer">---------------</string>
    <string name="txt_schule_art">Art der Schule:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_finish">Finish</string>
    <string name="todo">TODO</string>
    <string name="_">" "</string>
    <string name="txt_titel">Titel</string>
    <string name="txt_plz_ort">PLZ Ort</string>
    <string name="txt_ort">Ort:</string>
    <string name="txt_plz">PLZ:</string>
    <string name="txt_von">von:</string>
    <string name="txt_bis">bis:</string>
    <string name="txt_add">Skill hinzufügen</string>
    <string name="txt_zertifikate">Zertifikate:</string>

    <!-- Menue -->
    <string-array name="listdialog_array">
        <item>Übernehmen</item>
        <item>Löschen</item>
    </string-array>
        <string name="speichern">Speichern</string>

</resources>