<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BerufserfahrungActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/obenBerufserfahrung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/obenBildung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/obenBild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/obenSkills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/obenZusammenfassung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/obenFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <!-- Hauptteil Titel -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/titelPicPersonalien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ico_beruf" />

        <TextView
            android:id="@+id/titelTextPersonalien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_berufserfahrung" />
    </LinearLayout>

    <!-- Start Body -->

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.00" >

        <TableRow
            android:id="@+id/tableRow_txt_firma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_firma_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_firma" />

            <EditText
                android:id="@+id/txt_firma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_txt_titel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_titel_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_titel" />

            <EditText
                android:id="@+id/txt_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_txt_adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_adresse_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_adresse" />

            <EditText
                android:id="@+id/txt_adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_txt_plz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_plz_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_plz" />

            <EditText
                android:id="@+id/txt_plz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_txt_ort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_ort_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ort" />

            <EditText
                android:id="@+id/txt_ort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_txt_dauer_von"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_dauer_von_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_von" />

            <TextView
                android:id="@+id/txt_dauer_bis_label_platzHalter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DatePicker" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_txt_dauer_bis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_dauer_bis_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bis" />

            <TextView
                android:id="@+id/txt_dauer_bis_label_platzHalter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DatePicker" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_txt_taetigkeit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_taetigkeit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_taetigkeit" />

            <EditText
                android:id="@+id/txt_taetigkeit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <!-- Navigation -->
        </TableRow>

        <TableRow
            android:id="@+id/add_berufserfahrung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/sf_add_berufserfahrung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:onClick="onClickAddBerufserfahrung"
                android:text="@string/txt_berufserfahrung_add" />
        </TableRow>
    </TableLayout>

    <!-- Ende Body -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3300FF"
        android:orientation="horizontal" >

        <!-- Button Navigation -->


        <!-- Button Navigation Berufserfahrung -->

        <ImageButton
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:onClick="onClickBild"
            android:src="@drawable/ic_launcher" />

        <ImageButton
            android:id="@+id/buttonBerufserfahrung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:onClick="onClickBildung"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

</LinearLayout>